# rustOS

./: .dockerignore  .gitignore  .gitmodules  .nvimlog  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.ltp  FILESYSTEM_COMPLETION_PLAN.md  FS_SUBSYSTEM_DOCUMENTATION.md  MEMORY_SYSCALL_REFACTOR_PLAN.md  Makefile  README-TEST.md  REFACTORING_PROGRESS.md  STAGE3_ANALYSIS.md  clippy.toml  docker-compose.yml  implementation_plan.md.resolved  kernel-rv  kernel-rv-autotest-debug  kernel-rv-autotest-trace  kernel-rv-autotest-vmdebug  kernel-rv-diagnose  kernel-rv-vmprobe  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.concept-dev.bak.20260227004933/: assumption_registry.json  state.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-boot-executor-hal-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-vm-core-pmap/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-exception-fixup-vfs-disk-process/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/03.1-verification-bookkeeping-user-memory-safety/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-VERIFICATION.md
.planning/phases/04-pipes-signals-full-syscalls/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-03-PLAN.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-page-reclamation-la64-port/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-04-PLAN.md  05-05-PLAN.md  05-06-PLAN.md  05-07-PLAN.md  05-08-PLAN.md  (+1 more)
.target-kernel/: .rustc_info.json
ai/: pipe测试失败分析-测试脚本缺陷.md  错误处理修复清单.md
hal-common/: Cargo.toml
hal-common/src/: addr.rs  errno.rs  irq_lock.rs  lib.rs  once.rs  run_queue.rs  timer_wheel.rs  trap_frame.rs
judge/: batch_judge.sh
judge/basic/: make_baseline_row.py  run_judge.py
kernel/: Cargo.toml
kernel-mm/: Cargo.toml
kernel-mm/src/: allocator  lib.rs  pmap.rs  pmap_tests.rs  uio.rs  vm
kernel/.cargo/: config.toml
kernel/linker/: la64-qemu.ld  rv64-qemu.ld
kernel/src/: alloc_early.rs  console.rs  feature_flags.rs  la64_bringup.rs  libc_stubs.rs  lockdep.rs  main.rs  trap.rs
kernel/src/drivers/: mod.rs  pci.rs  virtio_blk.rs  virtio_mmio.rs  virtio_pci.rs
kernel/src/executor/: mod.rs  per_cpu.rs  schedule.rs  user_task.rs  user_task.rs.backup
kernel/src/fs/: bringup_stub.rs  delegate.rs  dentry.rs  devfs.rs  ext4.rs  fd_table.rs  lwext4_disk.rs  mod.rs  mount.rs  page_cache.rs  path.rs  pipe.rs  stat.rs  symlink.rs  syscalls.rs  vnode.rs
kernel/src/hal/: console.rs  cpu.rs  entry.rs  mod.rs  paging.rs  platform.rs  signal_abi.rs  syscall_abi.rs  time.rs  trap.rs  usercopy.rs
kernel/src/hal/la64/: boot.S  bringup_smoke_user.S  console.rs  cpu.rs  ipi.rs  irq.rs  memops.S  mod.rs  platform.rs  signal_abi.rs  syscall_abi.rs  time.rs  tlb.rs  trap.S  trap.rs  uart.rs  user_trap.rs  usercopy.rs
kernel/src/hal/la64/paging/: asid.rs  mod.rs  pte.rs  shootdown.rs  walk.rs
kernel/src/hal/rv64/: boot.S  cache.rs  copy_user.rs  fdt.rs  ipi.rs  irq.rs  memops.S  mod.rs  plic.rs  sbi.rs  smp.rs  timer.rs  tlb.rs  trap.S  trap.rs  uart.rs  user_trap.rs
kernel/src/hal/rv64/paging/: asid.rs  mod.rs  pte.rs  shootdown.rs  walk.rs
kernel/src/hal_common/: addr.rs  errno.rs  irq_lock.rs  leveled_rwlock.rs  mod.rs  once.rs  run_queue.rs  spin_mutex.rs  timer_wheel.rs  trap_frame.rs
kernel/src/ipc/: futex.rs  mod.rs
kernel/src/mm/: mod.rs  uio.rs
kernel/src/mm/allocator/: buddy.rs  frame_allocator.rs  magazine.rs  mod.rs  types.rs
kernel/src/mm/pmap/: asid.rs  container.rs  mod.rs  pte.rs  shootdown.rs  test_integration.rs  walk.rs
kernel/src/mm/vm/: fault.rs  fault_async.rs  mod.rs  object.rs  page.rs  page_daemon.rs  test_integration.rs  vm_map.rs  vm_object.rs  wait_queue.rs
kernel/src/mm/vm/fault/: async_resolve.rs  mod.rs  sync.rs
kernel/src/mm/vm/map/: entry.rs  map.rs  mod.rs  splay.rs
kernel/src/mm/vm/object/: mod.rs  page_daemon.rs  pager.rs  vm_object.rs
kernel/src/mm/vm/page/: mod.rs  page_ref.rs  vm_page.rs  wait_queue.rs
kernel/src/net/: addr.rs  mod.rs  tcp.rs  udp.rs  util.rs
kernel/src/proc/: clone.rs  elf.rs  exec.rs  exit_wait.rs  fork.rs  mod.rs  pid.rs  signal.rs  syscall_result.rs  syscalls.rs  task.rs  user_copy.rs
kernel/src/proc/exec/: elf.rs  exec_ctx.rs  mod.rs
kernel/src/syscall/: fs.rs  io_async.rs  memory.rs  misc.rs  mod.rs  net.rs  process.rs  signal.rs  sync.rs
reports/: vm_obj_collapse.md
scripts/: init  init.S  initproc  initproc-la64  initproc-la64-autotest  intergration_command  la64-full-smoke.sh  la64-smoke.sh  make_ext4_img.py  make_ext4_img_deprecated.py  make_sdcard_img.sh  make_test_img.sh  setup_completion.zsh  test_runner.py
scripts/oscomp/: run-la-select.sh  run-rv-basic-all.sh  run-rv-basic.sh  run-rv-nettest.sh  run-rv-oj.sh  run-rv-select.sh
scripts/toolchain-wrappers/: cmake
user/: Cargo.toml
user/.cargo/: config.toml
user/src/: console.rs  entry-la64.S  entry.S  lib.rs  linker-la64.ld  linker.ld  syscall.rs
user/target-test-la64/: .rustc_info.json
(+303 files in other folders)
