[workspace]
members = ["kernel"]
exclude = ["user"]
resolver = "2"

[workspace.dependencies]
bitflags = "2"
lwext4_rust = { git = "https://github.com/PACTHEMAN123/ext4fs.git", default-features = false, branch = "main" }
log = { version = "0.4", default-features = false }
lazy_static = { version = "1.4", default-features = false, features = ["spin_no_std"] }
