[package]
name = "kernel-mm"
version = "0.1.0"
edition = "2021"

[features]
default = ["standalone"]
# When compiled as kernel-mm (standalone test crate), excludes modules that
# depend on kernel-only paths (crate::fs::, crate::proc::).
standalone = []

[dependencies]
hal-common = { path = "../hal-common" }
spin = "0.9"
bitflags = { workspace = true }
