[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
qemu-test = []

[dependencies]
hal-common = { path = "../hal-common" }
async-task = { version = "4.7", default-features = false }
bitflags = { workspace = true }
spin = "0.9"
linked_list_allocator = { version = "0.10", default-features = false }
lwext4_rust = { workspace = true }
