[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
qemu-test = []
autotest = []
log-boot    = []
log-syscall = []
log-trap    = []
log-vm      = []
log-sched   = []
log-fs      = []
log-driver  = []
log-smp     = []
log-signal  = []
log-exec    = []
log-pipe    = []
log-proc    = []
log-net     = []
log-all     = ["log-boot", "log-syscall", "log-trap", "log-vm", "log-sched", "log-fs", "log-driver", "log-smp", "log-signal", "log-exec", "log-pipe", "log-proc", "log-net"]

log-level-error = []
log-level-warn  = ["log-level-error"]
log-level-info  = ["log-level-warn"]
log-level-debug = ["log-level-info"]
log-level-trace = ["log-level-debug"]
log-level-all   = ["log-level-trace"]
exec-legacy = []
[dependencies]
async-task = { version = "4.7", default-features = false }
bitflags = { workspace = true }
fdt = "0.1.5"
spin = "0.10.0"
linked_list_allocator = { version = "0.10", default-features = false }
lwext4_rust = { workspace = true }
goblin = { version = "0.10.5", default-features = false, features = ["elf64", "elf32", "endian_fd"] }
smoltcp = { version = "0.11", default-features = false, features = [
    "alloc", "medium-ip",
    "proto-ipv4",
    "socket-tcp", "socket-udp",
    "log",
]}

[lints]
workspace = true

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
loom = "0.7.2"
